# stellwerk

./: .gitignore  Cargo.toml  README.md
docker/: .dockerignore  docker-compose.yml
docker/socialmediathingnametbd-api/: Dockerfile  Dockerfile.dockerignore
docker/stellwerk-api/: Dockerfile  Dockerfile.dockerignore
socialmediathingnametbd-api/: Cargo.toml
socialmediathingnametbd-api/src/: main.rs
socialmediathingnametbd-api/src/server/: auth.rs  json.rs  mod.rs  posts.rs  users.rs
socialmediathingnametbd-api/src/server/routes/: mod.rs  posts.rs  users.rs
socialmediathingnametbd-common/: Cargo.toml
socialmediathingnametbd-common/src/: lib.rs  snowflake.rs  util.rs
socialmediathingnametbd-common/src/model/: auth.rs  mod.rs  post.rs  user.rs
socialmediathingnametbd-db/: Cargo.toml
socialmediathingnametbd-db/.sqlx/: query-04bb9d9f0bf6556bc35270edf57025be6f6dcff3d5b3aab0736fdea7ff73a484.json  query-1011e023a8932aed6a192e3699c124b63f9cb0929a1ac2ca857c824e480b9d30.json  query-14bacc8c150ff1ff5c50a522eec4491f7f7e1e7f1ffb6a1994fc6176cacc7c81.json  query-57e170d006005f5ba20015c503baa36d5a5a0c47bcb2e7dbab5a95118a100ba1.json  query-eee9c57331c8c6bef37d50c43dfb006b0d5b8e381438f9cf1ac09b75b45d5beb.json  query-f5df55e09412126bf7cd7ab9cc81a41392e35e2a24980a51b5d25cfc3e377fd6.json
socialmediathingnametbd-db/migrations/: 20251010105322_rename_snowflakes.sql  20251026103255_bytestring_tokens.sql
socialmediathingnametbd-db/src/: client.rs  lib.rs  record.rs
stellwerk-api/: Cargo.toml
stellwerk-api/src/: main.rs
stellwerk-api/src/server/: auth.rs  mod.rs
stellwerk-api/src/server/routes/: mod.rs  posts.rs  users.rs
stellwerk-common/: Cargo.toml
stellwerk-common/src/: lib.rs
stellwerk-common/src/model/: mod.rs  post.rs  user.rs
stellwerk-db/: Cargo.toml
stellwerk-db/.sqlx/: query-1a248f5dc2e861d66d36a5cb1b83c6fae8567d797dfd055ac5f85135e736af21.json  query-23071e4a553b6036f6f8b71c74aa500b4920b8418526c462e443018d41a1d9eb.json  query-2bc326fbaaae01b96a423dd5d2c79038ba393ea87b4eff4e6300a07b66812edb.json  query-4b7d148910e42c24f2e1d2ccf9f2191bb5e12f9360fe5849f0a3c058eaa1011c.json  query-66214ae59d0679a7da775ce3459b473cdeab23d8510562f0916f6671d97066ea.json  query-b0d9868e03db14627667462d009d9ab9fcd4ec1c7da029e6ff0d43d0a5768052.json
stellwerk-db/migrations/: 20251006115305_initial_migration.sql  20251024195410_add_auth.sql
stellwerk-db/src/: client.rs  record.rs
