[workspace]
members = ["socialmediathingnametbd-api", "socialmediathingnametbd-common", "socialmediathingnametbd-db"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
