[package]
name = "socialmediathingnametbd-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
axum = "0.8.6"
axum-server = "0.7.2"
axum-extra = "0.10.3"

[lints]
workspace = true
