[package]
name = "socialmediathingnametbd-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
socialmediathingnametbd-common = { path = "../socialmediathingnametbd-common" }
socialmediathingnametbd-db = { path = "../socialmediathingnametbd-db" }

dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.8.6", features = ["macros"] }
axum-server = "0.7.2"
axum-extra = { version = "0.10.3", features = ["typed-header", "typed-routing"] }
headers = "0.4.1"

[lints]
workspace = true
