[package]
name = "socialmediathingnametbd-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
derive-where = { version = "1.6.0", features = ["serde"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true
