[package]
name = "socialmediathingnametbd-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
derive-where = { version = "1.6.0", features = ["serde"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.9.2"

[lints]
workspace = true
