[package]
name = "socialmediathingnametbd-db"
version = "0.1.0"
edition.workspace = true

[dependencies]
socialmediathingnametbd-common = { path = "../socialmediathingnametbd-common" }

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.17"

[lints]
workspace = true
